welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:44: error: not found: value retorne
      retorne()
      ^